adapter/internal/operator/gateway-api/testdata/securitypolicy-with-cors.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-2
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-3
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    namespace: default
    name: grpcroute-1
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - apk.wso2.com
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-2
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/"
      backendRefs:
      - name: service-1
        port: 8080
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-2
  spec:
    hostnames:
    - apk.wso2.com
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-3
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/"
      backendRefs:
      - name: service-2
        port: 8080
securityPolicies:
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: envoy-gateway
    name: policy-for-gateway-1
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      namespace: envoy-gateway
    cors:
      allowOrigins:
      - "http://*.example.com"
      - "http://foo.bar.com"
      - "https://*"
      allowMethods:
      - GET
      - POST
      allowHeaders:
      - "x-header-1"
      - "x-header-2"
      exposeHeaders:
      - "x-header-3"
      - "x-header-4"
      maxAge: 1000s
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: default
    name: policy-for-route-1
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
      namespace: default
    cors:
      allowOrigins:
      - "https://*.test.com:8080"
      - "https://www.test.org:8080"
      allowMethods:
      - GET
      - POST
      allowHeaders:
      - "x-header-5"
      - "x-header-6"
      exposeHeaders:
      - "x-header-7"
      - "x-header-8"
      maxAge: 2000s
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: default
    name: policy-for-route-2
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-2
      namespace: default
    cors:
      allowOrigins:
      - "*"
      allowMethods:
      - GET
      - POST
      allowHeaders:
      - "x-header-5"
      - "x-header-6"
      exposeHeaders:
      - "x-header-7"
      - "x-header-8"
      maxAge: 2000s
